--- a/src/HUD/Radar/radar.scss
+++ b/src/HUD/Radar/radar.scss
@@ -24,6 +24,11 @@
 		perspective: 500px;
 	}
 }
+.radar-component-container {
+	width: 350px;
+	height:350px;
+	overflow: hidden;
+}
 #maps_container {
 	width: 100%;
 	height: 30px;
